# seqwebcode

./: .cursorrules  .gitignore  .rules  LICENSE  LICENSE-GUIDE.md  Notes.md  POLYGLOT_IMPLEMENTATION_STATUS.md  README.md  bootstrap  dev-notes.md  lib_rename_survey.md  pythonseqweb  requirements.txt  seqweb  seqweb.conf  seqwebdev
src/python/: __init__.py  dependencies.md  get_core_oeis_numbers.py  oeis_session.py  pyproject.toml  requirements.txt  run_tests.py
src/python/app/: requirements.txt
src/python/app/cli/: README.md  __init__.py  _seqwebdev  base.py  base_command.py  dispatcher.py  registry.py  seqwebdev  setup.py
src/python/app/fab/: __init__.py  add_raw_text.py  add_sections.py  dump_graph.py  fab0.py  fab1.py  get_metadata.py  get_oeis_data.py  get_ontology.py  id_only.py  init_graph.py  init_sequence.py  make_list.py  make_one.py  make_range.py  mod0.py  mod2.py  pipeline.py  print_graph.py  process_sections.py  prune_prefixes.py  segment_sections.py  standardize_id.py  summarize_list.py  summarize_metadata.py
src/python/app/oeis/: get_core_oeis_numbers.py
src/python/cli/: dispatcher.py  seqwebdev  setup.py
src/python/cli/commands/: cursor.py  dict.py  get.py  help.py  run.py  set.py  setup.py  vars.py  (+1 more)
src/python/home/: paths.py
src/python/oeis/: get_core_oeis_numbers.py  oeis_session.py
src/python/seqvar/: __init__.py  init_seqvar_db.py  init_seqvar_store.py  seqvar.py  seqvar_toml.py
src/python/test/: hello_world.py  test_seqvar.py
src/python/tools/: cli.py  generate_cursor_workspace_config.py
src/python/workspace/: transforms.py
(+151 files in other folders)
