# Created by Waldo 2025-08-20

# SeqWeb bootstrap process will do
#   `pip install -e seqwebcode/src/python`
# to pick this up

[project]
name = "seqvar"
version = "0.0.1"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["seqvar"]
